overflow bug fixed

--- a/css/site.css
+++ b/css/site.css
@@ -771,6 +771,7 @@ body {
 #sponsors {
   position: relative;
   font-family: "Muli";
+  overflow: hidden;
   background: #8db17f;
   /* Old browsers */
   /* FF3.6+ */
@@ -786,7 +787,7 @@ body {
   /* IE6-9 */
 }
 
-/* line 15, ../sass/modules/_sponsors.scss */
+/* line 16, ../sass/modules/_sponsors.scss */
 .sponsor-header-image {
   position: absolute;
   width: 101%;
@@ -794,7 +795,7 @@ body {
   z-index: 1;
 }
 
-/* line 22, ../sass/modules/_sponsors.scss */
+/* line 23, ../sass/modules/_sponsors.scss */
 .sponsor-header {
   position: relative;
   z-index: 5;
@@ -805,7 +806,7 @@ body {
   padding-top: 15%;
 }
 
-/* line 32, ../sass/modules/_sponsors.scss */
+/* line 33, ../sass/modules/_sponsors.scss */
 .sponsor-subheader {
   position: relative;
   z-index: 5;
@@ -815,12 +816,12 @@ body {
   font-size: .7em;
   padding-bottom: 6em;
 }
-/* line 41, ../sass/modules/_sponsors.scss */
+/* line 42, ../sass/modules/_sponsors.scss */
 .sponsor-subheader a {
   color: #ffdb6d;
   text-decoration: none;
 }
-/* line 45, ../sass/modules/_sponsors.scss */
+/* line 46, ../sass/modules/_sponsors.scss */
 .sponsor-subheader a:visited {
   color: #ffdb6d;
 }
