--- a/sass/modules/_sponsors.scss
+++ b/sass/modules/_sponsors.scss
@@ -1,6 +1,7 @@
 #sponsors {
   position: relative;
   font-family: "Muli";
+  overflow: hidden;
 
   background: #8db17f; /* Old browsers */
   background: -moz-linear-gradient(top,  #8db17f 0%, #8bd5ed 100%); /* FF3.6+ */
